--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,10 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,400italic,400,300,700);
 
 body {
   padding:50px;
-  font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#777;
+  font:18px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color:#555;
   font-weight:300;
+
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -21,7 +22,7 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size:28px;
+  font-size:34px;
 }
 
 h2 {
@@ -61,14 +62,36 @@ code, pre {
   font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
   color:#333;
   font-size:12px;
+  font-weight:normal;
+  font-style:normal;
+}
+
+code {
+   position: relative;
+   top: -1px;
+   margin: 0 2px;
+   padding: 1px 5px;
+   border: 1px solid rgb(221, 221, 221);
+   background-color: rgb(248, 248, 248);
+   border-radius: 3px 3px 3px 3px;
+}
+
+pre code {
+   position: static;
+   border: none;
+   padding: 0px;
+   color: #fff;
+   background: transparent;
 }
 
 pre {
-  padding:8px 15px;
-  background: #f8f8f8;  
+  padding:15px 25px;
+  background: rgb(252, 252, 255);  
   border-radius:5px;
   border:1px solid #e5e5e5;
   overflow-x: auto;
+  box-shadow:inset 0 0 3px rgba(0,0,0,0.05);
+  background: #333;
 }
 
 table {
@@ -99,53 +122,57 @@ header {
   width:270px;
   float:left;
   position:fixed;
+  text-align: right;
 }
 
 header ul {
   list-style:none;
   height:40px;
-  
-  padding:0;
-  
-  background: #eee;
-  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  
+  padding: 0;
   border-radius:5px;
-  border:1px solid #d2d2d2;
-  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
+  border:3px solid #000;
   width:270px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
 }
 
 header li {
   width:89px;
   float:left;
-  border-right:1px solid #d2d2d2;
+  border-right:1px solid #888;
   height:40px;
 }
 
 header ul a {
   line-height:1;
-  font-size:11px;
+  font-size:12px;
   color:#999;
   display:block;
   text-align:center;
-  padding-top:6px;
-  height:40px;
+  padding-top:0px;
+  padding-top: 6px;
+  height:34px;
+}
+
+header ul a:hover {
+   background: #333;
+   color: #eee !important;
+}
+  
+header ul a:hover strong {
+   color: #eee;
 }
 
 strong {
   color:#222;
-  font-weight:700;
+  font-weight:400;
+}
+
+em {
+  font-style:italic;
 }
 
 header ul li + li {
-  width:88px;
-  border-left:1px solid #fff;
+  width:90px;
 }
 
 header ul li + li + li {
@@ -157,12 +184,17 @@ header ul a strong {
   font-size:14px;
   display:block;
   color:#222;
+  font-weight:700;
 }
 
 section {
   width:500px;
   float:right;
   padding-bottom:50px;
+  border-left:1px solid #eee;
+  padding-left: 40px;
+  padding-top: 60px;
+  margin-top: -60px;
 }
 
 small {
@@ -181,10 +213,13 @@ footer {
   float:left;
   position:fixed;
   bottom:50px;
-}
+  text-align:right;
+}  
+  html {
+  border-left: 30px solid #333;}
 
 @media print, screen and (max-width: 960px) {
-  
+
   div.wrapper {
     width:auto;
     margin:0;
@@ -194,41 +229,32 @@ footer {
     float:none;
     position:static;
     width:auto;
+    text-align:left;
   }
   
   header {
-    padding-right:320px;
+     border:1px solid #eee;
+     border-left: 0;
+     border-right: 0;
+     border-radius:5px;
+     padding: 75px 0;
   }
   
   section {
     border:1px solid #e5e5e5;
-    border-width:1px 0;
+    border-width:0 0 1px;
     padding:20px 0;
-    margin:0 0 20px;
+    margin:20px 0;
   }
   
   header a small {
     display:inline;
-  }
-  
-  header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
   }
 }
 
 @media print, screen and (max-width: 720px) {
   body {
     word-wrap:break-word;
-  }
-  
-  header {
-    padding:0;
-  }
-  
-  header ul, header p.view {
-    position:static;
   }
   
   pre, code {
@@ -242,7 +268,7 @@ footer {
   }
   
   header ul {
-    display:none;
+      display: none;
   }
 }
 
